# Rail-PVC

./: CLAUDE.md  CODEX.md  ENGINEERING_GUIDELINES.md  README.md  REVIEW.md  REVIEW_PHASE0_PHASE1.md  SESSION_LOG.md  STATUS.md  TASKS.md  WORKPLAN.md
REFERENCES/: Monthly Index Apr 2026.numbers  PDF Data Extraction Rates.csv  Steel Index.xlsx  cpiw_labour_2016base.csv  jpc_monthly_averages.csv  jpc_raw_extracted.csv
archive/: REVIEW_ARCHIVE.md  SESSION_LOG_ARCHIVE.md
backend/: .env.example  RLS_POLICIES.md  Untitled  main.py  pyproject.toml
backend/api/: bills.py  carry_forwards.py  contract_items.py  contracts.py  documents.py  extra_items.py  indices.py  pvc_rules.py  pvc_runs.py  schedules.py
backend/migrations/versions/: 012_idempotency_key.py
backend/services/: auth.py  db.py  errors.py  pvc_service.py  storage.py  zone_mapping.py
backend/tests/: test_p3_01_env_example.py  test_p3_02_extra_item_payload.py  test_p3_03_indices_no_tenant_writes.py  test_p3_04_zone_snapshot.py  test_p3_05_idempotency.py  test_p3_06_bill_line_integrity.py  test_p3_07_default_rule_set.py  test_p3_08_clean_import.py  test_p3_09_error_contract.py  test_p3_bf_1_schedules.py  test_p3_bf_2_contract_items.py  test_p3_bf_3_recoveries.py  test_p3_bf_4_documents.py  test_sh_p5_bills_get.py
engine/: calculator.py  components.py  types.py  w_derivation.py
frontend/: middleware.ts  package-lock.json  package.json
scripts/: run_engine_fixture.py
seeds/: compute_jpc_monthly.py  extract_jpc_pdf.py  seed_indices.py
tasks/: lessons.md  phase-4-design-options.html  (+2 more)
(+46 files in other folders)
